--- a/ui/src/app/views/workspace-share/component.html
+++ b/ui/src/app/views/workspace-share/component.html
@@ -17,14 +17,12 @@
   </div>
   <div class="modal-body" id="sharing-modal-body">
 
-    <div style="border-bottom: 1px solid black; padding-bottom: .5rem;"
-         class="dropdown"
+    <div class="dropdown"
          [class.open]="autocompleteUsers.length || autocompleteNoResults">
 
       <div class="search-box">
         <clr-icon shape="search"></clr-icon>
         <input clrInput
-               style="width: 90%"
                class="no-border"
                type="text"
                name="to-share"
@@ -48,7 +46,7 @@
              (click)="selectUser(autocompleteUser)">
 
           <!-- TODO: Lots of duplicated code here. Can the user row be templatized???? -->
-          <div class="collaborator" style="margin-top: -1rem;">
+          <div class="collaborator">
             <h5 class="user-name">
               {{autocompleteUser.givenName}} {{autocompleteUser.familyName}}
             </h5>
@@ -68,16 +66,19 @@
             </h5>
             <div class="user-email">{{selectedUser.email}}</div>
           </div>
-          <clr-tooltip>
-            <div class="collaborator-icon">
-              <clr-icon shape="minus-circle" clrTooltipTrigger (click)="clearSelectedUser()"></clr-icon>
-              <clr-tooltip-content clrPosition="middle-right" clrSize="sm" *clrIfOpen>
-                <span>Remove selected user</span>
-              </clr-tooltip-content>
-            </div>
-          </clr-tooltip>
+          <div class="collaborator-icon">
+            <clr-icon shape="minus-circle" (click)="clearSelectedUser()"></clr-icon>
+          </div>
         </div>
-
+        <div class="form-group select">
+          <label>
+            <select [disabled]="!hasPermission">
+              <option value="Reader" (click)="setAccess('Reader')">Reader</option>
+              <option value="Writer" (click)="setAccess('Writer')">Writer</option>
+              <option value="Owner" (click)="setAccess('Owner')">Owner</option>
+            </select>
+          </label>
+        </div>
         <!--<div>-->
           <!--<clr-dropdown>-->
             <!--<button type="button" class="btn btn-outline-primary permissions-button" clrDropdownTrigger [disabled]="!hasPermission">-->
@@ -110,22 +111,29 @@
     </div>
 
     <!-- Current Collaborators -->
-    <div class="user-area">
+    <div>
       <div *ngFor="let collaboratorUser of workspace.userRoles" class="user" [ngClass]="{'owner' : (collaboratorUser.email === userEmail || !hasPermission)}">
-        <div style="display: flex; align-items: center;">
-          <div class="collaborator">
-            <h5 class="user-name">
-              {{collaboratorUser.givenName}} {{collaboratorUser.familyName}}
-            </h5>
-            <div class="user-email">{{collaboratorUser.email}}</div>
-            <div class="user-role">{{collaboratorUser.role}}</div>
+        <div class="collaborator">
+          <h5 class="user-name">
+            {{collaboratorUser.givenName}} {{collaboratorUser.familyName}}
+          </h5>
+          <div class="user-email">{{collaboratorUser.email}}</div>
+          <div class="form-group select">
+            <label>
+              <select [disabled]="!hasPermission">
+                <option value="Reader">Reader</option>
+                <option value="Writer">Writer</option>
+                <option value="Owner">Owner</option>
+              </select>
+            </label>
           </div>
-          <div class="collaborator-icon">
-            <clr-icon *ngIf="collaboratorUser.email !== userEmail && hasPermission"
-                      shape="minus-circle"
-                      class="remove-button"
-                      (click)="removeCollaborator(collaboratorUser)"></clr-icon>
-          </div>
+          <!--<div class="user-role">{{collaboratorUser.role}}</div>-->
+        </div>
+        <div class="collaborator-icon">
+          <clr-icon *ngIf="collaboratorUser.email !== userEmail && hasPermission"
+                    shape="minus-circle"
+                    class="remove-button"
+                    (click)="removeCollaborator(collaboratorUser)"></clr-icon>
         </div>
       </div>
     </div>
