--- a/ui/src/app/views/workspace-share/component.html
+++ b/ui/src/app/views/workspace-share/component.html
@@ -27,9 +27,8 @@
                type="text"
                name="to-share"
                [(ngModel)]="searchTerm"
-               [ngModelOptions]="{debounce: 10000}"
                placeholder="Find Collaborators"
-               (ngModelChange)="toShareChangedEvent($event)"
+               (ngModelChange)="searchTermChangedEvent($event)"
                #usernameSharingInput [disabled]="!hasPermission"/>
         <span *ngIf="autocompleteLoading" class="spinner spinner-inline"></span>
       </div>
@@ -44,12 +43,11 @@
         <div *ngFor="let autocompleteUser of autocompleteUsers"
              class="user dropdown-item bordered"
              (click)="selectUser(autocompleteUser)">
-
           <!-- TODO: Lots of duplicated code here. Can the user row be templatized???? -->
-          <div class="collaborator">
-            <h5 class="user-name">
+          <div class="">
+            <div class="user-name">
               {{autocompleteUser.givenName}} {{autocompleteUser.familyName}}
-            </h5>
+            </div>
             <div class="user-email">{{autocompleteUser.email}}</div>
           </div>
           <div class="collaborator-icon">
@@ -70,29 +68,19 @@
             <clr-icon shape="minus-circle" (click)="clearSelectedUser()"></clr-icon>
           </div>
         </div>
-        <div class="form-group select">
-          <label>
-            <select [disabled]="!hasPermission">
-              <option value="Reader" (click)="setAccess('Reader')">Reader</option>
-              <option value="Writer" (click)="setAccess('Writer')">Writer</option>
-              <option value="Owner" (click)="setAccess('Owner')">Owner</option>
-            </select>
-          </label>
+        <div>
+          <clr-dropdown>
+            <button type="button" class="btn btn-outline-primary permissions-button" clrDropdownTrigger [disabled]="!hasPermission">
+              {{selectedPermission}}
+              <clr-icon shape="caret down"></clr-icon>
+            </button>
+            <clr-dropdown-menu *clrIfOpen>
+              <button type="button" clrDropdownItem (click)="setAccess('Reader')">Reader</button>
+              <button type="button" clrDropdownItem (click)="setAccess('Writer')">Writer</button>
+              <button type="button" clrDropdownItem (click)="setAccess('Owner')">Owner</button>
+            </clr-dropdown-menu>
+          </clr-dropdown>
         </div>
-        <!--<div>-->
-          <!--<clr-dropdown>-->
-            <!--<button type="button" class="btn btn-outline-primary permissions-button" clrDropdownTrigger [disabled]="!hasPermission">-->
-              <!--{{selectedPermission}}-->
-              <!--<clr-icon shape="caret down"></clr-icon>-->
-            <!--</button>-->
-            <!--<clr-dropdown-menu *clrIfOpen>-->
-              <!--<button type="button" clrDropdownItem (click)="setAccess('Reader')">Reader</button>-->
-              <!--<button type="button" clrDropdownItem (click)="setAccess('Writer')">Writer</button>-->
-              <!--<button type="button" clrDropdownItem (click)="setAccess('Owner')">Owner</button>-->
-            <!--</clr-dropdown-menu>-->
-          <!--</clr-dropdown>-->
-        <!--</div>-->
-
       </div>
 
     </div>
