[RW-1107][RW-1108][risk=no] Conditions/Procedures vocabulary search UI (#1194)
*  RW-1107 Condition dropdown and search bar html

*  RW-1107 Condition dropdown and search bar html

*  RW-1107 condition dropdown populate

*  RW-1107 condition dropdown populate

*  RW-1107 dropdown click dropdown component

*  RW-1107  chamges for dropdown selection

*  RW-1107  dropdown click load fixed

*  RW-1107  changes for building cohort from dropdown

*  RW-1107  functionality to load tree

*  RW-1107 changes ti title for icd 9 and icd 10

*  RW-1107 ICD9 and ICD!) sleected id shown together

*  RW-1107 css changes for dropdown

*  RW-1107 removed duplicate identifier

* RW-1107 changes for condition title

* RW-1107 fixing merge changes

* RW-1107 fixed physical measurement tree with icd9 and icd10

* RW-1107 default tree for condition set to icd9

* RW-1107 remove icd9 and icd 10 from domain dropdown

* RW-1107 search changes

* RW-1107 changes to show search dropdown

* RW-1107 info icon in modifier fixed

* RW-1107 type added with code while selecting

* RW-1107 revert the icon changes

* RW-1107 rename dropdown component

* RW-1107 add dropdown options to constants object

* RW-1107 add active item action in modal component

* RW-1107 add subtypes for conditions to constant

* RW-1107 add item type to open wizard action

* RW-1107 add redux action for criteria subtype api call

* RW-1107 include autocomplete search for conditions and procedures

* RW-1107 fix broken tests

* RW-1107 fix edit function in overview

* RW-1107 add render test for code-dropdown component

* RW-1107 fix test for search-group-item component

* RW-1107 fix api keys for procedures and cpts

* RW-1107 fix final api calls

* RW-1107 prevent adding duplicate encounters modifier fields

* RW-1107 fix lint error

* [DB-29] Start moving CDR version stuff into common-api. [risk=low] (#1192)

* Moving CDR version stuff to common

--- a/ui/src/app/cohort-search/modal/modal.component.html
+++ b/ui/src/app/cohort-search/modal/modal.component.html
@@ -5,7 +5,7 @@
         <div class="col col-sm-8 padding-zero" [ngClass]="{'col col-lg-12': ctype === treeType[treeType.DEMO]}">
           <div class="title-bar">
             <div class="btn-group btn-link">
-              <ng-container *ngIf="ctype !== treeType[treeType.DEMO]">
+              <ng-container *ngIf="(ctype !== treeType[treeType.DEMO])">
                 <button  *ngIf="attributesNode.size === 0"
                   type="button"
                   class="btn tab"
@@ -112,7 +112,6 @@
               </ng-container>
             </ng-container>
           </div>
-
         </div>
       </div>
     </div>
