--- a/ui/src/app/cohort-search/tree/tree.component.html
+++ b/ui/src/app/cohort-search/tree/tree.component.html
@@ -6,7 +6,17 @@
   <clr-icon shape="error-standard"></clr-icon>
   <em>Failed to Load Criteria</em>
 </div>
-<app-search-bar *ngIf="showSearch() && !loading" [_type]="_type"></app-search-bar>
+<!--dropdown for conditions start-->
+<div class="dropdown-search-container">
+  <div [ngClass]="{'condition-dropdown' : showDropDown()}">
+    <ng-container *ngIf = "showDropDown() && !loading">
+    <crit-code-dropdown (onOptionChange)="optionChange($event)" [_type]="_type"></crit-code-dropdown>
+    </ng-container>
+  </div>
+  <div [ngClass]="showDropDown()? 'search-container' :'search-width'">
+    <app-search-bar *ngIf="showSearch() && !loading" [_type]="_type"></app-search-bar>
+  </div>
+</div>
 <div *ngIf="numMatches > 1">
   <b>Note:</b> There are {{numMatches}} matches for your search
 </div>
