--- a/ui/src/app/cohort-search/modal/modal.component.html
+++ b/ui/src/app/cohort-search/modal/modal.component.html
@@ -76,11 +76,14 @@
                 <div class="panel-right-container">
                   <h5 class="selection-title">{{ selectionTitle }}</h5>
                   <div class="panel-right selected">
-                    <crit-selection-info
-                            *ngFor="let parameter of (selection$ | async); let i = index"
-                            [index]="i"
-                            [parameter]="parameter">
-                    </crit-selection-info>
+                    <ng-container *ngFor="let type of objectKey(selections)">
+                      <h6 class="selection-header" *ngIf="showHeader">{{selectionHeader(type)}}</h6>
+                      <crit-selection-info
+                        *ngFor="let parameter of selections[type]; let i = index"
+                        [index]="i"
+                        [parameter]="parameter">
+                      </crit-selection-info>
+                    </ng-container>
                   </div>
                   <div *ngIf="ctype !== treeType[treeType.DEMO]" class="footer">
                     <button type="button"
