[RW-1177][Risk=no] Add modal to let us pick name and kernel for new notebooks (#1186)
* Add modal to let us pick name and kernel for new notebooks

* PR comments

* Fix tests

* ConvertToParamMap

* Fix local and work on tests

* Add more tests and try other things

* Fix linting

* Add test as bad version...

* PR feedback

* Add styling to error

* Add blank name makes button disabled

* Fix lint

* Revert config change

* Jeremy feedback - move to radio buttons

* Remove old comment

--- a/ui/src/app/views/notebook-list/component.html
+++ b/ui/src/app/views/notebook-list/component.html
@@ -90,3 +90,4 @@
 
 <app-rename-modal [resourceType]="'notebook'" [resource]="notebookInFocus" (receiveRename)="receiveRename($event)"></app-rename-modal>
 <app-confirm-delete-modal [resourceType]="'notebook'" [resource]="notebookInFocus" (receiveDelete)="receiveDelete($event)"></app-confirm-delete-modal>
+<app-new-notebook-modal [workspace]="workspace" [existingNotebooks]="notebookList"></app-new-notebook-modal>
