--- a/ui/src/app/cohort-search/multi-select/multi-select.component.html
+++ b/ui/src/app/cohort-search/multi-select/multi-select.component.html
@@ -1,47 +1,39 @@
+Multi html—
+
 <div class="ds-wrapper">
   <div class="ds-options">
     <div class="select-box">
-      <div *ngIf="includeSearchBox" class="box-header">
+      <div *ngIf="includeSearchBox" class="box-header demo-search-box">
         <input
-          [formControl]="filter"
-          [name]="filter"
-          [id]="filter"
-          type="text"
-          placeholder="Search" />
+                [formControl]="filter"
+                [name]="filter"
+                [id]="filter"
+                type="text"
+                placeholder="Search" />
         <label for="filter">
           <clr-icon *ngIf="filter.value && filter.value.trim()"
-            shape="window-close"
-            (click)="unsetFilter()">
+                    shape="window-close"
+                    (click)="unsetFilter()">
           </clr-icon>
           <clr-icon *ngIf="!filter.value || !filter.value.trim()"
-            shape="search">
+                    shape="search">
           </clr-icon>
         </label>
       </div>
-      <div class="option-list">
-        <div *ngFor="let opt of filteredOptions" class="option" (click)="select(opt)">
+      <div class="" [ngClass]="[includeSearchBox? 'search-option-list' :'option-list']" >
+        <span *ngIf="loading" class="spinner spinner-md"></span>
+        <div *ngFor="let opt of filteredOptions; let i = index" class="option" (click)="select(opt, i, opt.get('parameterId'))">
+          <clr-icon  *ngIf="!selectedOption.selected[opt.get('parameterId')]"  shape="plus-circle"  size="20" class="selection-icon items-selection-icon" ></clr-icon>
+          <clr-icon  *ngIf="selectedOption.selected[opt.get('parameterId')]" shape="check-circle" size="25"  class="selection-icon items-disabled-icon"></clr-icon>
           {{ opt.get('name', '') | titlecase }}
           <span *ngIf="opt.get('count')" class="badge badge-info">
             {{ opt.get('count') | number }}
           </span>
+          <!--<span *ngIf="selectedOption.selected[opt.get('parameterId')]" class="spinner spinner-sm"></span>-->
         </div>
       </div>
     </div>
   </div>
-
-  <div class="ds-selected">
-    <div class="ds-selected-list">
-      <div *ngFor="let opt of selectedOptions"
-        (click)="unselect(opt)"
-        class="label label-light-blue clickable"
-        >
-        <clr-icon shape="window-close"></clr-icon>
-        {{ opt.get('name', '') | titlecase }}
-        <span *ngIf="opt.get('count')" class="badge">
-          {{ opt.get('count') | number }}
-        </span>
-      </div>
-    </div>
-  </div>
-  <span *ngIf="loading" class="spinner spinner-md"></span>
+  <!--<span *ngIf="loading" class="spinner spinner-md"></span>-->
 </div>
+
