Fix edit/clone of unset underserved populations

--- a/ui/src/app/views/workspace-edit/component.html
+++ b/ui/src/app/views/workspace-edit/component.html
@@ -200,6 +200,7 @@
             <div class="checkbox-group">
               <div style="display: flex">
                 <div (click)="workspace.researchPurpose.containsUnderservedPopulation = !workspace.researchPurpose.containsUnderservedPopulation"
+                    class="underserved-icon"
                     style="cursor: pointer; padding-right: 6px">
                   <clr-icon *ngIf="workspace.researchPurpose.containsUnderservedPopulation"
                       shape="minus-circle" class="underserved-icon"></clr-icon>
