--- a/ui/src/app/cohort-search/modal/modal.component.html
+++ b/ui/src/app/cohort-search/modal/modal.component.html
@@ -79,21 +79,14 @@
                 <div class="panel-right-container">
                   <h5 class="selection-title">{{ selectionTitle }}</h5>
                   <div class="panel-right selected">
-                    <!--<crit-selection-info-->
-                            <!--*ngFor="let parameter of (selection$ | async); let i = index"-->
-                            <!--[index]="i"-->
-                            <!--(demoItems) = "demoPId($event)"-->
-                            <!--[parameter]="parameter">-->
-                    <!--</crit-selection-info>-->
-                    <ng-container *ngFor="let type of objectKey(selections)">
-                      <h6 class="selection-header" *ngIf="showHeader">{{selectionHeader(type)}}</h6>
-                      <crit-selection-info
-                              *ngFor="let parameter of selections[type]; let i = index"
-                              (demoItems) = "demoPId($event)"
-                              [index]="i"
-                              [parameter]="parameter">
-                      </crit-selection-info>
-                    </ng-container>
+                    hello{{noSelection}}
+                    <crit-selection-info
+                            *ngFor="let parameter of (selection$ | async); let i = index"
+                            [index]="i"
+                            [paramenterObj] = "selection$"
+                            (demoItems) = "demoPId($event)"
+                            [parameter]="parameter">
+                    </crit-selection-info>
                   </div>
                   <div class="footer">
                     <button type="button"
